[package]
name = "stellar-mixer-event-server"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "mixer_archive_server"
path = "src/lib.rs"

[[bin]]
name = "stellar-mixer-event-server"
path = "src/main.rs"

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
anyhow = "1"
axum = "0.8"
base64 = "0.22"
dotenvy = "0.15"
hex = "0.4"
rocksdb = "0.22"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
stellar-rpc-client = "27"
stellar-strkey = "0.0.18"
stellar-xdr = { version = "27", features = ["base64", "serde", "serde_json"] }
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "signal", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
hyper = "1"
tower = { version = "0.5", features = ["util"] }
